Adding Check digit to validate Account number.

--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -38,3 +38,4 @@ sqlquery.cpdb.payment.validation.log=SELECT cpdbpayrvlog.PAYMENT_VALIDATION_ACTI
 query.get.all.content=select CNTNT_ID, AREA, LANG, NAME, VALUE, CNTNT_VR_ID from gme_res_main.mobile_content where cntnt_vr_id = (select max(cntnt_vr_id) from gme_res_main.mobile_content)
 
 query.gme.insert.password.tnx=INSERT INTO gme_res_main.OL_EXTERNAL_REQUEST (COMPANY_CODE, TRANSACTION_ID, USER_UNIQUE_ID, STATUS_FLAG,REQUEST_TYPE, EXPIRATION_DATE) VALUES ( ?, ?, ?, ?, ?, ?)
+query.gme.update.password.status.code=UPDATE gme_res_main.ol_external_request set gme_res_main.ol_external_request.STATUS_FLAG='C' where  STATUS_FLAG='O' and gme_res_main.ol_external_request.user_unique_id = ( select distinct gme_res_main.Ol_ACCOUNT.user_unique_id from gme_res_main.OL_EXTERNAL_REQUEST , gme_res_main.Ol_ACCOUNT where gme_res_main.ol_external_request.user_unique_id = gme_res_main.Ol_ACCOUNT.user_unique_id and gme_res_main.Ol_ACCOUNT.USER_LOGIN_ID = ? and STATUS_FLAG='O')
