--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -117,3 +117,8 @@ ws.rest.ccs.google.product.set.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB
 ##START : OE | Sprint 46 | US15066 | Kdeshmu1
 ws.rest.ccs.update.etfflag.crm.url = http://sapcmd02:8000/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/ActivateETF?Partner={0}&Account={1}
 ##END : OE | Sprint 46 | US15066 | Kdeshmu1
+
+
+######## GME Related #######
+GME.MYACCOUNT.LOGIN.URL=https://myaccount-test.greenmountain.com/
+GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetPassword/
