Added environmental impact API to GME mobile app.

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -51,3 +51,9 @@ url.new.occupant.confirmation.form.pennywise=https://www.pennywisepower.com/en_U
 0391.CE.web.url=https://signup.cirroenergy.com
 0400.web.url=https://www.everythingenergytx.com
 serviced.tdsp.codes=D0001,D0002,D0003,D0004,D0005,D0009
+
+
+trees.per.second=0.032716901
+co2.per.second=274.723814
+total.baseline=63082993919
+total.baseline.tree=7512533
