Added New API for GME Mobile-APP to get the Content from the SDL for the Offer Code from the contractInfo call

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -57,3 +57,8 @@ trees.per.second=0.032716901
 co2.per.second=274.723814
 total.baseline=63082993919
 total.baseline.tree=7512533
+
+re.taxonomy.id = 301
+pw.taxonomy.id = TODO
+ce.taxonomy.id = TODO
+gm.taxonomy.id = TODO
