--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -117,3 +117,41 @@ ws.rest.ccs.google.product.set.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB
 ######## GME Related #######
 GME.MYACCOUNT.LOGIN.URL=https://myaccount-test.greenmountain.com/
 GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetPassword/
+
+#Content server props
+gm.content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
+content.rest.server.url =http://txaixebxindxd02:9088/contentService/content/getContentData
+re.content.server.endpoint.url=http://txaixebnbld01:8081/client/v2/content.svc/
+
+#Tempalte Id's
+re.tempalte.id_desktop=111201
+re.tempalte.id_mobile=TODO
+pw.tempalte.id_desktop=884
+pw.tempalte.id_mobile=TODO
+ce.tempalte.id_desktop=884
+ce.tempalte.id_mobile=TODO
+gm.tempalte.id_desktop=884
+gm.tempalte.id_mobile=TODO
+
+#Publication Id's
+re.pub.id_en=84
+re.pub.id_es=101
+pw.pub.id_en=21
+pw.pub.id_es=81
+ce.pub.id_en=143
+ce.pub.id_es=144
+gm.pub.id_en=123
+gm.pub.id_es=124
+
+re.taxonomy.id = 301
+pw.taxonomy.id = TODO
+ce.taxonomy.id = TODO
+gm.taxonomy.id = TODO
+
+#Schema Id's
+re.prodoffer.schema.id=6868
+re.prodbonus.schema.id=6872
+pw.prodoffer.schema.id=63
+pw.prodbonus.schema.id=TODO
+gm.prodoffer.schema.id = 11791
+gm.prodbonus.schema.id=TODO
