--- a/pom.xml
+++ b/pom.xml
@@ -831,7 +831,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-oe-domain</artifactId>
-			<version>8-SNAPSHOT</version>
+			<version>9</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
