committed for bug Fix

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -119,8 +119,8 @@ GME.MYACCOUNT.LOGIN.URL=https://myaccount-test.greenmountain.com/
 GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetPassword/
 
 #Content server props
-gm.content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
-content.rest.server.url =http://txaixebxindxd02:9088/contentService/content/getContentData
+gm.content.server.endpoint.url=http://txaixebxindxs01:13180/cd-service/gme/cdws/odata.svc/
+content.rest.server.url =http://txaixebxindxs02:13180/contentService/content/getContentData
 re.content.server.endpoint.url=http://txaixebnbld01:8081/client/v2/content.svc/
 
 #Tempalte Id's
@@ -130,7 +130,7 @@ pw.tempalte.id_desktop=884
 pw.tempalte.id_mobile=TODO
 ce.tempalte.id_desktop=884
 ce.tempalte.id_mobile=TODO
-gm.tempalte.id_desktop=884
+gm.tempalte.id_desktop=6974
 gm.tempalte.id_mobile=TODO
 
 #Publication Id's
@@ -153,6 +153,6 @@ re.prodoffer.schema.id=6868
 re.prodbonus.schema.id=6872
 pw.prodoffer.schema.id=63
 pw.prodbonus.schema.id=TODO
-gm.prodoffer.schema.id = 11791
+gm.prodoffer.schema.id =6969
 gm.prodbonus.schema.id=TODO
-gm.base.url=https://signup.greenmountain.com 
+gm.base.url=https://signup.greenmountain.com
