--- a/pom.xml
+++ b/pom.xml
@@ -891,6 +891,13 @@
 		    <artifactId>sqljdbc4</artifactId>
 		    <version>4.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.8.1</version>
+		     <scope>${dependency.scope}</scope>
+		</dependency> 
 
 		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
