Fixed th image tag removal to url displaay of src.

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -155,4 +155,4 @@ pw.prodoffer.schema.id=63
 pw.prodbonus.schema.id=TODO
 gm.prodoffer.schema.id =6969
 gm.prodbonus.schema.id=TODO
-gm.base.url=https://signup.greenmountain.com
+gm.base.url=https://stg-signup.greenmountain.com
