--- a/pom.xml
+++ b/pom.xml
@@ -898,5 +898,56 @@
 			<version>11.2.0.3</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <exclusions>
+	        <exclusion>
+	            <artifactId>hamcrest-core</artifactId>
+	            <groupId>org.hamcrest</groupId>
+	        </exclusion>
+	    </exclusions>
+	</dependency>
+	<dependency>
+	    <groupId>org.hamcrest</groupId>
+	    <artifactId>hamcrest-all</artifactId>
+	    <version>1.3</version>
+	</dependency>
+	<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.15.0</version>
+			<scope>test</scope>		
+		</dependency>
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<!-- <version>4.3.7.RELEASE</version> -->
+		<version>3.2.3.RELEASE</version>
+		<scope>test</scope>
+	</dependency>
+	
+	<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.8.1</version>
+		     <scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.8.1</version>
+		     <scope>${dependency.scope}</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.8.1</version>
+		     <scope>${dependency.scope}</scope>
+		</dependency>	
 	</dependencies>
 </project>
