TaskId[US18891]: MBAR SP 23:GIACT bank validation rest call implementation initial commit

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -111,6 +111,10 @@ ws.rest.ccs.get.agent.details.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_
 ws.rest.ccs.update.etfflag.crm.url = http://sapcmd02:8000/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/ActivateETF?Partner={0}&Account={1}
 ##END : OE | Sprint 46 | US15066 | Kdeshmu1
 
+##START : OE | Sprint 23 | US18891 |GIACT IMPL For Bank| Nkatragadda
+ws.rest.ccs.bank.giact.call.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/BankValidation?CA={0}&COCODE={1}&BANKACCOUNT={2}&ROUTING={3}&TRACKING={4}&$format=json
+##END : OE | Sprint 23 | US18891 |GIACT IMPL For Bank | Nkatragadda
+
 
 #ECommerce End Points
 ws.rest.ccs.google.product.set.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/GoogleProductSet
