--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -39,3 +39,5 @@ query.get.all.content=select CNTNT_ID, AREA, LANG, NAME, VALUE, CNTNT_VR_ID from
 
 query.gme.insert.password.tnx=INSERT INTO gme_res_main.OL_EXTERNAL_REQUEST (COMPANY_CODE, TRANSACTION_ID, USER_UNIQUE_ID, STATUS_FLAG,REQUEST_TYPE, EXPIRATION_DATE) VALUES ( ?, ?, ?, ?, ?, ?)
 query.gme.update.password.status.code=UPDATE gme_res_main.ol_external_request set gme_res_main.ol_external_request.STATUS_FLAG='C' where  STATUS_FLAG='O' and gme_res_main.ol_external_request.user_unique_id = ( select distinct gme_res_main.Ol_ACCOUNT.user_unique_id from gme_res_main.OL_EXTERNAL_REQUEST , gme_res_main.Ol_ACCOUNT where gme_res_main.ol_external_request.user_unique_id = gme_res_main.Ol_ACCOUNT.user_unique_id and gme_res_main.Ol_ACCOUNT.USER_LOGIN_ID = ? and STATUS_FLAG='O')
+
+query.gme.validate.password.link=SELECT to_char(expiration_date,'YYYY-MM-DD hh24:mi:ss') expiration_date FROM gme_res_main.OL_EXTERNAL_REQUEST WHERE  STATUS_FLAG='O' AND TRANSACTION_ID=?
