--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
 					<parallel>methods</parallel>
 					<threadCount>10</threadCount>
 					<includes>
-						<include>**/*Test.class</include>
+						<include>**/RestAssuredConfiguration.class</include>
 					</includes>
 				</configuration>
 			</plugin>
