--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,9 @@
 					<testFailureIgnore>false</testFailureIgnore>
 					<!-- <parallel>methods</parallel> -->
 					<threadCount>10</threadCount>
+					<includes>
+						<include>**/RestAssuredConfiguration.class</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
