--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	</pluginRepositories>
 
 	<properties>
-		<jdk.version>1.7</jdk.version>
+		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
 		<junit.version>4.11</junit.version>
 		<spring-version>5.1.5.RELEASE</spring-version>
@@ -638,7 +638,7 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.4.1.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -886,10 +886,17 @@
 			<version>11.2.0.3</version>
 			<scope>provided</scope>
 		</dependency>	
+		
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring-version}</version>
 		</dependency>
 	</dependencies>
 </project>
