--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-  <filter>
+ <!--   <filter>
     <filter-name>LocaleRequestFilter</filter-name>
     <filter-class>
         com.multibrand.web.context.request.LocaleRequestFilter
@@ -51,7 +51,7 @@
 	<servlet-mapping>
 		<servlet-name>NRGRESTService</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
   
  <!--  <servlet>
 		<servlet-name>NRGRESTService</servlet-name>
