Committed for Swagger Changes...

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<dependency.scope>compile</dependency.scope>
 		<snapshot-version>-SNAPSHOT</snapshot-version>
 		<snapshot-enabled>true</snapshot-enabled>
+		<swagger-ui.version>2.9.2</swagger-ui.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -892,6 +893,24 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${swagger-ui.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.plugin</groupId>
+					<artifactId>spring-plugin-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger-ui.version}</version>
 		</dependency>
 
 		
