--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 				</executions>
 			</plugin>
 			<!-- For running Unit Tests -->
-			<plugin>
+<!-- 		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
@@ -136,6 +136,19 @@
 					<includes>
 						<include>**/*Test.class</include>
 					</includes>
+				</configuration>
+			</plugin>  -->	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>${argLine} -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+					<reportsDirectory>${basedir}/target/test-output/</reportsDirectory>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+					<!-- <forkCount>3</forkCount> <reuseForks>true</reuseForks> -->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -510,6 +523,43 @@
 
 			</plugin>
 			<!-- END OF GIT COMMIT ID PLUGIN CONFIGURATION -->
+			<!-- Jacoco Plugin -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<executions>
+					<!-- Prepares the property pointing to the JaCoCo runtime agent which 
+						is passed as VM argument when Maven the Surefire plugin is executed. -->
+					<execution>
+						<id>pre-unit-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<!-- Sets the path to the file which contains the execution data. -->
+							<destFile>${basedir}/target/coverage-reports/jacoco-ut.exec</destFile>
+
+							<!-- Sets the output directory for the code coverage report. -->
+						</configuration>
+					</execution>
+					<execution>
+						<!-- Ensures that the code coverage report for unit tests is created 
+							after unit tests have been run. -->
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<!-- Sets the path to the file which contains the execution data. -->
+							<dataFile>${basedir}/target/coverage-reports/jacoco-ut.exec</dataFile>
+							<!-- Sets the output directory for the code coverage report. -->
+							<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 	</build>
@@ -525,6 +575,13 @@
     		</exclusion>
   			</exclusions>
 		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot-version}</version>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>com.nrg.util</groupId>
